--- a/3020finalproject/.gitignore
+++ b/3020finalproject/.gitignore
@@ -15,7 +15,7 @@
 
 # next.js
 # /.next/
-/out/
+# /out/
 
 # production
 # /build
@@ -30,11 +30,11 @@ yarn-debug.log*
 yarn-error.log*
 
 # env files (can opt-in for committing if needed)
-.env*
+# .env*
 
 # vercel
 .vercel
 
 # typescript
-*.tsbuildinfo
-next-env.d.ts
+# *.tsbuildinfo
+# next-env.d.ts
