--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 # Auto detect text files and perform LF normalization
 * text=auto
-3020finalproject/ filter=lfs diff=lfs merge=lfs -text
+3020Project/ filter=lfs diff=lfs merge=lfs -text
